--- a/index.html
+++ b/index.html
@@ -977,8 +977,8 @@
 
 			const quotes = [
 			  {
-			    "quote": "Bila kau tak tahan lelahnya belajar, maka kau harus tahan menanggung perihnya kebodohan",
-			    "source": "Imam Syafi'i"
+			    "quote": "Belajar dari masa lalu, agar tak diulang di masa depan",
+			    "source": "Ardthan"
 			  },
 			  {
 			    "quote": "Fokus ke kamu aja , gamau ke yang lain !",
